# xc_utils

./: .gitignore  install.txt  readme.md  readme.txt
src/: CMakeLists.txt  CPackConfig.cmake  doxygen.conf
src/CuadGauss/: Cuadratura1D.h  Cuadratura2D.cc  Cuadratura2D.h  Cuadratura3D.cc  Cuadratura3D.h  PsoGss2d.cc  PsoGss3d.cc  PuntosGauss.cc  PuntosGauss.h  gssleg.cc  gssleg.h
src/base/: ArchivosES.h  ArchivosEntrada.cc  ArchivosEntrada.h  ArchivosSalida.cc  ArchivosSalida.h  BloqueBase.cc  BloqueBase.h  BloqueCond.cc  BloqueCond.h  BloqueFor.cc  BloqueFor.h  BloqueFunc.cc  BloqueFunc.h  BloqueIf.cc  BloqueIf.h  BloqueSub.cc  BloqueSub.h  BloqueSwitchStr.cc  BloqueSwitchStr.h  BloqueWhile.cc  BloqueWhile.h  Buscadores.cxx  Buscadores.hxx  CmdFixedWidthReader.cc  CmdFixedWidthReader.h  CmdFuncPorPuntos.cc  CmdFuncPorPuntos.h  CmdMatriz.cc  CmdMatriz.h  CmdStatus.cc  CmdStatus.h  CmdTimer.cc  CmdTimer.h  CmdVectorBase.cc  CmdVectorBase.h  CmdVectorDenso.cc  CmdVectorDenso.h  EntConNmb.cc  EntConNmb.h  EntWOwner.cc  (+28 more)
src/functions/algebra/: Algebra.h  ArbolExpr.cc  ArbolExpr.h  CacheExpresiones.cc  CacheExpresiones.h  ConjVariables.cc  ConjVariables.h  Constante.cc  Constante.h  ExprAlgebra.cc  ExprAlgebra.h  ExprBase.cc  ExprBase.h  ExprFunctor.cc  ExprFunctor.h  ExprInfija.cc  ExprInfija.h  ExprPostfija.cc  ExprPostfija.h  Expresion.cc  Expresion.h  LexAlgebra.cc  LexAlgebra.h  Lexico.cc  Lexico.h  Literal.cc  Literal.h  Macaulay.cc  Macaulay.h  MapValores.cc  MapValores.h  NamedOperand.cc  NamedOperand.h  OpBinario.cc  OpBinario.h  OpBooleano.cc  OpBooleano.h  OpComparacion.cc  OpComparacion.h  OpTrigonometricas.cc  (+30 more)
src/functions/estadisticas/: Gumbel.h  Muestra.cc  Muestra.h  combinatoria.cc  combinatoria.h  statlib.cc  statlib.h
src/functions/extremos/: extremo.cc  extremo.h  parametriza.h
src/functions/funcs_forma/: FForma.cc  FForma.h  IntegrationPoints.cc  IntegrationPoints.h  PtosIntegracion.cc  PtosIntegracion.h
src/functions/macaulay/: Macaulay.cc  Macaulay.h
src/functions/max_min/: Parameterize.h  max_min.cc  max_min.h  parametriza.h
src/functions/op_dif/: op_dif.h
src/functions/polinomios/: IndPol.cc  IndPol.h  NmbVars.cc  NmbVars.h  Polinomio.cc  Polinomio.h  function.h
src/functions/polynomials/: IndPol.cc  IndPol.h  NmbVars.h  Polynomial.cc  Polynomial.h  function.h
src/functions/raices/: Metodo2Func.h  NewtonRaphson.cc  NewtonRaphson.h  bisection.h  root.cc  root.h
src/functions/roots/: Metodo2Func.h  NewtonRaphson.cc  NewtonRaphson.h  bisection.h  root.h
src/functions/shape_functions/: IntegrationPoints.h  ShapeFunction.cc  ShapeFunction.h
src/functions/statistics/: Gumbel.h  Sample.cc  Sample.h  combinatorics.cc  (+3 more)
src/gauss_quadrature/: Cuadratura1D.h  Cuadratura2D.cc  Cuadratura2D.h  Cuadratura3D.cc  Cuadratura3D.h  GaussPoints.cc  GaussPoints.h  GaussQuadrature1D.h  GaussQuadrature2D.cc  GaussQuadrature2D.h  GaussQuadrature3D.cc  GaussQuadrature3D.h  GaussWeights1d.cc  GaussWeights1d.h  GaussWeights2d.cc  GaussWeights2d.h  GaussWeights3d.cc  GaussWeights3d.h  PsoGss1d.cc  PsoGss1d.h  PsoGss2d.h  PsoGss3d.h  gssleg.cc  gssleg.h
src/geom/: FT_matrix.cc  FT_matrix.h  GeomObj.cc  GeomObj.h  ProtoGeom.cc  ProtoGeom.h  cdg.h  center_of_mass.h  cgal_types.cc  cgal_types.h  export_sys_trf.cc  matriz_FT.cc  matriz_FT.h  proximidad.h  proximity.h  python_interface.cc  python_interface.h  tipos_cgal.cc  tipos_cgal.h
src/gnu_gts/: GTSBBoxTree.cc  GTSBBoxTree.h  GTSEdge.cc  GTSEdge.h  GTSFace.cc  GTSFace.h  GTSGraph.cc  GTSGraph.h  GTSSplit.cc  GTSSplit.h  GTSSurface.cc  GTSSurface.h  GTSSurfaceIntersection.cc  GTSSurfaceIntersection.h  GTSSurfaceTraverse.cc  GTSSurfaceTraverse.h  GTSVertex.cc  GTSVertex.h  MapTriangulos.cc  MapTriangulos.h  TriangleMap.cc  TriangleMap.h  python_interface.cc
src/kdtree++/: iterator.hpp  node.hpp  region.hpp
src/kernel/: CommandEntity.cc  CommandEntity.h  EntityWithOwner.cc  EntityWithOwner.h  EntityWithProperties.cc  EntityWithProperties.h  ErrLogFiles.cc  ErrLogFiles.h  NamedEntity.cc  NamedEntity.h  VarTypes.h  python_interface.cc  python_utils.cc  python_utils.h
src/libplot/: CmdPlotter.cc  CmdPlotter.h
src/loadCombinations/: python_interface.cc
src/matrices/: BoxConstRef.cc  BoxConstRef.h  ColumnConstRef.h  ExpressionMatrix.cc  ExpressionMatrix.h  Indices3dArray.cc  Indices3dArray.h  IndicesMatrix.cc  IndicesMatrix.h  MExpressionMatrix.cc  MExpressionMatrix.h  MMatrix.cc  MMatrix.h  MatrixRange.cc  MatrixRange.h  PolynomialMatrix.cc  PolynomialMatrix.h  ProtoMatrix.h  RangoIndice.cc  RangoIndice.h  RowConstRef.h  TMatrix.h  ZMatrix.h  gauss_sim.h  giros.cc  giros.h  m_bool.cc  m_bool.h  m_double.cc  m_double.h  m_double_sim.h  m_func.h  m_int.cc  m_int.h  m_sizet.cc  m_sizet.h  m_string.cc  m_string.h  matdispZ.h  matridZ.h  (+10 more)
src/mysql/: MySqlColData.cc  MySqlColData.h  MySqlConnection.cc  MySqlConnection.h  MySqlObject.cc  MySqlObject.h  MySqlQuery.cc  MySqlQuery.h  MySqlResult.cc  MySqlResult.h  MySqlRow.cc  MySqlRow.h
src/nucleo/: AnalisisLexico.cc  AnalisisLexico.h  AnalisisSintactico.cc  AnalisisSintactico.h  BoostAnyStack.cc  BoostAnyStack.h  CmdParser.cc  CmdParser.h  EntBase.cc  EntBase.h  EntCmd.cc  EntCmd.h  EntCmd.ih  EntConNmb.cc  EntConNmb.h  EntProp.cc  EntProp.h  EntPropSorter.cc  EntPropSorter.h  EntWOwner.cc  EntWOwner.h  ErrLogFiles.cc  InterpreteRPN.cc  InterpreteRPN.h  MapParam.cc  MapParam.h  MapPropVar.cc  MapPropVar.h  MatrizAny.cc  MatrizAny.h  PropParser.cc  PropParser.h  Signos.cc  Signos.h  TokenList.cc  TokenList.h  VarTypes.h  aux_any.cc  aux_any.h  python_interface.cc  (+2 more)
src/sqlite/: SqLiteDatabase.cc  SqLiteDatabase.h  SqLiteObject.cc  SqLiteObject.h  SqLiteQuery.cc  SqLiteQuery.h
src/utils/: ObjMap.h
src/vtk_aux/: python_interface.cc  vtkArcSource.cxx  vtkArcSource.h  vtkDoubleHeadedArrowSource.cc  vtkDoubleHeadedArrowSource.h  vtkLabeledShStrMapper.cxx  vtkLabeledShStrMapper.h  vtkShStrArray.cxx  vtkShStrArray.h  vtkTakePhoto.cc  vtkTakePhoto.h  vtkTakePhotoDefs.cc  vtkTakePhotoDefs.h  vtkXOpenGLOffScreenRenderWindow.cxx  vtkXOpenGLOffScreenRenderWindow.h
(+1010 files in other folders)
